# TheAlgorithm

./: .dockerignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .wranglerignore  404.html  CONTRIBUTING.md  Dockerfile  GROWTH_ISSUES.md  ISSUE-1.md  ISSUE-2.md  ISSUES.md  Makefile  README.md  SECURITY_ISSUES.md  _headers  _redirects  app.py  dashboard.html  eslint.config.mjs  fix_app_allowed.py  fix_dashboard_v2.js  fix_html_v2.js  gh_latest_log.txt  gh_log.txt  hf_failed_logs.txt  history.html  index.html  instructions.html  issue-ai-feature.md  issue-ai-provider.md  issue-analytics.md  issue-contributor.md  issue-infra.md  issue-ux.md  issue1.txt  issue2.txt  (+36 more)
.Jules/: palette.md
.github/: labeler.yml
.jules/: atlas.md  bolt.md  chronicle.md  echo.md  forge.md  iris.md  issue-growth-1.md  issue-growth-2.md  palette.md  scribe.md  sentinel.md  veil.md
api/: index.py
cloud_api/: app.py  requirements.txt
core/: analytics.py  llm_service.py  parsers.py
functions/: _middleware.js
issues/: ux-empty-states.md  ux-shareable-card.md
scripts/: download_model.py
static/: robots.txt  sitemap.xml
templates/: 404.html  dashboard.html  index.html  instructions.html  privacy.html
tests/: test_analytics.py  test_app.py  test_bolt_optimizations.py  test_cloud_api_security.py  test_dos_protection.py  test_escape.js  test_gemini_payload.py  test_js_parsers.py  test_json_parsers.py  test_llm.py  test_parser.js  test_parsers.py  test_security_hardening.py  test_sentinel_fixes.py  test_sentinel_hardened.py
(+26 files in other folders)
