[project]
name = "the-algorithm"
version = "0.1.0"
description = "A privacy-first AI relationship analyzer"
requires-python = ">=3.11"
dependencies = [
    "Flask~=3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
    "pytest-cov~=5.0.0",
    "ruff~=0.3.0",
    "mypy~=1.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-v --cov=. --cov-report=xml"
testpaths = ["tests"]
pythonpath = "."

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
